Add Java code formatter